--- a/package.json
+++ b/package.json
@@ -19,19 +19,17 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
-
-    "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.37",
-    "zone.js": "0.6.21",
-
+    "@types/es6-shim": "0.0.30",
     "@types/express": "^4.0.31",
     "@types/node": "^4.0.30",
-    "express": "^4.14.0",
-    "ws": "^1.1.1",
-    "@types/es6-shim": "0.0.30",
     "@types/ws": "0.0.29",
-    "typescript": "^2.0.0"
+    "core-js": "^2.4.0",
+    "express": "^4.14.0",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.37",
+    "typescript": "^2.0.0",
+    "ws": "^1.1.1",
+    "zone.js": "0.6.21"
   },
   "devDependencies": {
     "@types/es6-shim": "0.0.30",
