Added example material design components!!!

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,7 +4,16 @@
     "module": "commonjs",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "build"
+    "lib": ["es6", "dom"],
+    "module": "es6",
+    "moduleResolution": "node",
+    "outDir": "build",
+    "sourceMap": true,
+    "types": ["hammerjs"]
+  },
+  "angularCompilerOptions": {
+    "genDir": "aot",
+    "skipMetadataEmit" : true
   },
   "exclude": [
     "node_modules",
