--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
     "bidServer": "nodemon build/bids/bid-server.js"
   },
   "dependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/http": "^2.2.0",
-    "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
+    "@angular/common": "2.2.0",
+    "@angular/compiler": "2.2.0",
+    "@angular/core": "2.2.0",
+    "@angular/forms": "2.2.0",
+    "@angular/http": "2.2.0",
+    "@angular/material": "2.0.0-beta.1",
+    "@angular/platform-browser": "2.2.0",
+    "@angular/platform-browser-dynamic": "2.2.0",
     "@angular/router": "3.0.0",
     "@types/es6-shim": "0.0.30",
-    "@types/express": "^4.0.31",
-    "@types/node": "^4.0.30",
+    "@types/express": "4.0.31",
+    "@types/node": "4.0.30",
     "@types/ws": "0.0.29",
-    "core-js": "^2.4.0",
-    "express": "^4.14.0",
-    "hammerjs": "^2.0.8",
-    "rxjs": "^5.0.3",
+    "core-js": "2.4.0",
+    "express": "4.14.0",
+    "hammerjs": "2.0.8",
+    "rxjs": "5.0.3",
     "systemjs": "0.19.37",
-    "typescript": "^2.0.0",
+    "typescript": "2.0.0",
     "ws": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@types/es6-shim": "0.0.30",
